--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <title>Google</title>
 <h3>About        Store</h3>
-<img src = "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272" height="92" style="padding-top:109px">
+<img src = "https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" width="272" height="92" style="padding-top:109px"> <br>
+ <input type="text" placeholder="夢を書いて。。。">
